# aoc_2020

./: Cargo.toml  README.md
aoc/: Cargo.toml
aoc/src/: invalid_puzzle.rs  main.rs
day_01/: Cargo.toml
day_01/src/: solution.rs
day_02/: Cargo.toml
day_02/src/: solution.rs
day_03/: Cargo.toml
day_03/src/: solution.rs
day_04/: Cargo.toml
day_04/src/: solution.rs
day_05/: Cargo.toml
day_05/src/: solution.rs
day_06/: Cargo.toml
day_06/src/: solution.rs
day_07/: Cargo.toml
day_07/src/: lib.rs  solution.rs  tree.rs
day_08/: Cargo.toml
day_08/src/: instruction.rs  lib.rs  solution.rs
day_09/: Cargo.toml
day_09/src/: solution.rs
day_10/: Cargo.toml
day_10/src/: solution.rs
day_11/: Cargo.toml
day_11/src/: grid.rs  lib.rs  solution.rs
day_12/: Cargo.toml
day_12/src/: ferry.rs  lib.rs  solution.rs  vector.rs
day_13/: Cargo.toml
day_13/src/: solution.rs
day_14/: Cargo.toml
day_14/src/: solution.rs
day_15/: Cargo.toml
day_15/src/: solution.rs
day_16/: Cargo.toml
day_16/src/: solution.rs
day_21/: Cargo.toml
day_21/src/: solution.rs
day_22/: Cargo.toml
day_22/src/: solution.rs
day_four/: Cargo.toml
day_four/src/solution/: logic.rs
day_one/: Cargo.toml
day_one/src/: lib.rs
day_one/src/solution/: logic.rs
day_three/: Cargo.toml
day_three/src/solution/: logic.rs
day_two/: Cargo.toml
day_two/src/solution/: logic.rs
shared/: Cargo.toml
shared/src/: lib.rs  puzzle_trait.rs  tree.rs
shared/src/file_io/: input.rs
shared/src/traits/: mod.rs
