[package]
name = "aoc"
version = "0.1.0"
authors = ["Tahar <tntmeijs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "./../shared" }
day_01 = { path = "./../day_01" }
day_02 = { path = "./../day_02" }
day_03 = { path = "./../day_03" }
day_04 = { path = "./../day_04" }
day_05 = { path = "./../day_05" }
day_06 = { path = "./../day_06" }
day_07 = { path = "./../day_07" }
day_08 = { path = "./../day_08" }
